<resources>
    <string name="app_name">Latihan Checkbox</string>
    <string name="nilai_anda">Nilai anda:</string>
    <string name="periksa_nilai">Periksa Nilai</string>
    <string name="bontang">Bontang</string>
    <string name="banjarmasin">Banjarmasin</string>
    <string name="bogor">Bogor</string>
    <string name="bandung">Bandung</string>
    <string name="manakah_kota_dibawah_ini_yang_merupakan_ibu_kota_propinsi">Manakah kota dibawah ini yang merupakan ibu kota propinsi?</string>
</resources>
