<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manakah_kota_dibawah_ini_yang_merupakan_ibu_kota_propinsi" />

    <CheckBox
        android:id="@+id/bandung"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bandung" />

    <CheckBox
        android:id="@+id/bogor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bogor" />

    <CheckBox
        android:id="@+id/banjarmasin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banjarmasin" />

    <CheckBox
        android:id="@+id/bontang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bontang" />

    <Button
        android:id="@+id/bt_periksanilai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/periksa_nilai" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nilai_anda" />

        <TextView
            android:id="@+id/nilai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:text="" />

    </LinearLayout>

</LinearLayout>